--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -1,8 +1,13 @@
 .nav_container {
-  padding-top: 20px;
+  padding: 1rem;
+  background-color: #fff;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  margin-bottom: 3rem;
 }
 
 .nav_text {
   color: #343434;
   font-family: 'Roboto Mono', monospace;
+  font-weight: 900;
+  font-size: 1.5rem;
 }
