--- a/src/Pages/pages.scss
+++ b/src/Pages/pages.scss
@@ -64,15 +64,24 @@
 }
 
 .toaster_container {
-  background-color: #ffddc8;
   border: 2px solid rgba(0, 0, 0, 0.1);
   width: 40rem;
   padding: 10px 2rem;
   border-radius: 10px;
   text-align: center;
   font-size: 1rem;
-  color: #95674b;
-  margin-top: 2rem;
+
+  &_success {
+    background-color: #c8ffcf;
+    color: #4b955a;
+    margin-top: 1rem;
+  }
+
+  &_error {
+    background-color: #ffddc8;
+    color: #95674b;
+    margin-top: 2rem;
+  }
 }
 
 .main_container {
@@ -84,4 +93,34 @@
 }
 
 .result_container {
+}
+
+.confirmation_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header_success {
+  font-weight: 500;
+  color: #4b955a;
+}
+
+.note_warning {
+  color: #e44848;
+  font-size: 15px;
+  margin-top: 5px;
+}
+
+.traveller_detail_container {
+  margin: 2rem 0px;
+
+  span {
+    font-weight: 600;
+  }
+}
+
+.subHeader {
+  font-weight: 500;
 }
