--- a/src/Pages/pages.scss
+++ b/src/Pages/pages.scss
@@ -95,16 +95,23 @@
 .result_container {
 }
 
-.confirmation_container {
+.confirmation_container,
+.error_container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.header_success {
-  font-weight: 500;
-  color: #4b955a;
+.header {
+  &_success {
+    font-weight: 500;
+    color: #4b955a;
+  }
+  &_error {
+    font-weight: 500;
+    color: #a93d3d;
+  }
 }
 
 .note_warning {
